# nes-emulator-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  test
docs/: 6502.md  bookmarks.txt
include/: mos6502.hpp
src/: 6502.cpp  6502.hpp  main.cpp  mos6502.cpp  mos6502.hpp  opcode.hpp  test.cpp  test.hpp
test/: test.cpp  test.hpp
